[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/bucket_list/bucket_list_alpha_ch.png" type="Texture" id=1]
[ext_resource path="res://assets/bucket_list/tick_2_alpha.png" type="Texture" id=2]
[ext_resource path="res://assets/bucket_list/tick_3_alpha.png" type="Texture" id=3]
[ext_resource path="res://assets/bucket_list/tick_5_alpha.png" type="Texture" id=4]
[ext_resource path="res://assets/bucket_list/tick_4_alpha.png" type="Texture" id=5]
[ext_resource path="res://assets/bucket_list/tick_1_alpha.png" type="Texture" id=6]
[ext_resource path="res://assets/bucket_list/bucketlist2d.gd" type="Script" id=7]

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1868, 2664 )
script = ExtResource( 7 )

[node name="Handwritten" type="TextureRect" parent="."]
margin_right = 1868.0
margin_bottom = 2664.0
texture = ExtResource( 1 )

[node name="Tick1" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -49.796
margin_top = 106.816
margin_right = 72.204
margin_bottom = 263.816
texture = ExtResource( 3 )

[node name="Tick2" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -65.796
margin_top = 170.816
margin_right = 56.204
margin_bottom = 327.816
texture = ExtResource( 6 )

[node name="Tick3" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -68.796
margin_top = 322.816
margin_right = 73.204
margin_bottom = 479.816
texture = ExtResource( 5 )

[node name="Tick4" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -74.796
margin_top = 373.816
margin_right = 47.204
margin_bottom = 530.816
texture = ExtResource( 6 )

[node name="Tick5" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -55.796
margin_top = 516.816
margin_right = 66.204
margin_bottom = 673.816
texture = ExtResource( 5 )

[node name="Tick6" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -65.796
margin_top = 586.816
margin_right = 56.204
margin_bottom = 743.816
texture = ExtResource( 6 )

[node name="Tick7" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -62.796
margin_top = 693.816
margin_right = 59.204
margin_bottom = 850.816
texture = ExtResource( 6 )

[node name="Tick8" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -78.796
margin_top = 836.816
margin_right = 43.204
margin_bottom = 993.816
texture = ExtResource( 6 )

[node name="Tick9" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -65.796
margin_top = 992.816
margin_right = 56.204
margin_bottom = 1149.82
texture = ExtResource( 2 )

[node name="Tick10" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -65.796
margin_top = 1109.82
margin_right = 56.204
margin_bottom = 1266.82
texture = ExtResource( 3 )

[node name="Tick11" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -52.796
margin_top = 1211.82
margin_right = 69.204
margin_bottom = 1368.82
texture = ExtResource( 4 )

[node name="Tick12" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -65.796
margin_top = 1309.82
margin_right = 56.204
margin_bottom = 1466.82
texture = ExtResource( 6 )

[node name="Tick13" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -74.796
margin_top = 1440.82
margin_right = 47.204
margin_bottom = 1597.82
texture = ExtResource( 6 )

[node name="Tick14" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -58.796
margin_top = 1601.82
margin_right = 63.204
margin_bottom = 1758.82
texture = ExtResource( 5 )

[node name="Tick15" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -62.796
margin_top = 1678.82
margin_right = 59.204
margin_bottom = 1835.82
texture = ExtResource( 6 )

[node name="Tick16" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -52.796
margin_top = 1782.82
margin_right = 69.204
margin_bottom = 1939.82
texture = ExtResource( 6 )

[node name="Tick17" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -55.796
margin_top = 1881.82
margin_right = 66.204
margin_bottom = 2038.82
texture = ExtResource( 6 )

[node name="Tick18" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -55.796
margin_top = 2002.82
margin_right = 66.204
margin_bottom = 2159.82
texture = ExtResource( 6 )

[node name="Tick19" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -52.796
margin_top = 2141.82
margin_right = 69.204
margin_bottom = 2298.82
texture = ExtResource( 2 )

[node name="Tick20" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -58.796
margin_top = 2208.82
margin_right = 63.204
margin_bottom = 2365.82
texture = ExtResource( 6 )

[node name="Tick21" type="TextureRect" parent="Handwritten"]
visible = false
anchor_left = 0.047
anchor_top = 0.056
anchor_right = 0.047
anchor_bottom = 0.056
margin_left = -39.796
margin_top = 2366.82
margin_right = 82.204
margin_bottom = 2523.82
texture = ExtResource( 4 )
